fix: section spacing header

--- a/src/components/game/CardOptions/styles.module.scss
+++ b/src/components/game/CardOptions/styles.module.scss
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
   display: flex;
+  padding-top: 100px;
 
   .cards {
     width: 1400px;
